@@ -1,3 +1,7 @@
+2005-06-16 Vlad Seryakov vlad@crystalballinc.com
+
+	* NAPTR record support
+
 2005-06-13 Vlad Seryakov vlad@crystalballinc.com
 
 	* restructured for more performance of udp requests
